--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-div div div {
+.btn {
     margin: 5px;
     font-size: 50px;
     font-weight: bold; 
@@ -7,4 +7,10 @@ div div div {
     height: 80px; 
     text-align: center;
     box-shadow: 5px 5px 5px lightgray;
+    border-radius: 3px;
+}
+
+#display {
+    box-shadow: inset 3px 3px 5px darkgray;
+    padding: 2px;
 }
